Fix endpoint and create a new one
* fix update checklist endpoint
* create update checklistItem endpoint